--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "ufl-ranking-system",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^10.12.0",
-    "framer-motion": "^11.0.1",
-    "next": "13.5.6",
+    "firebase": "^10.7.1",
+    "framer-motion": "^11.0.6",
+    "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.5"
+    "@types/react": "^18.2.14",
+    "@types/node": "20.6.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.3.3"
   }
 }
